[package]
name = "pixelsort"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
description = "Bring your pixels back in order."
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Veykril/pixelsort.git"
edition = "2018"

[features]
default = ["rand", "imageproc"]

[dependencies.rand]
version = "0.7"
optional = true

[dependencies.imageproc]
version = "0.20"
optional = true

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"]

[dependencies.clap]
version = "2.33"
default-features = false
features = ["suggestions", "color"]

[dependencies.inversion-list]
git = "https://github.com/Veykril/inversion-list"
rev = "f04eb0550b10d40a3bff72daf70b06d539ab9cdb"